@@ -494,20 +494,13 @@ If using g++, problems like this can be flagged as a warning by using the "<code
         for (unsigned int i = 0; i &lt; count; ++i)
           ++total;
         </pre>
-        Though, I prefer to always wrap the body of the loop in braces,
-        to avoid surprises when other code or debugging statements are
-        added, and to maintain sanity when the body consists of a macro,
-        such as an <code>ACE_ASSERT</code> without a trailing semicolon:
-        <pre>
-        for (unsigned int i = 0; i &lt; count; ++i)
-          {
-            ACE_ASSERT (++total &lt; UINT_MAX;)
-          }
-        </pre><p>
 
         Similarly, <strong><code>if</code></strong> statements should have
         a space after the "<strong>if</strong>", and no spaces just after
         the opening parenthesis and just before the closing parenthesis.<p>
+
+        If there's just one statement in the loop or if statement
+        there's no need to use additional braces.
 
     <li>If a loop index is used after the body of the loop, it
         <strong>must</strong> be declared before the loop.  For example,
